rm JSC from WebCore/CMakeList.txt

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -104,24 +104,30 @@ set(WebCore_INCLUDE_DIRECTORIES
     "${WEBCORE_DIR}/workers"
     "${WEBCORE_DIR}/xml"
     "${WEBCORE_DIR}/xml/parser"
+
     "${WEBCORE_DIR}/ForwardingHeaders/wtf"
-    "${JAVASCRIPTCORE_DIR}"
-    "${JAVASCRIPTCORE_DIR}/ForwardingHeaders"
-    "${JAVASCRIPTCORE_DIR}/API"
-    "${JAVASCRIPTCORE_DIR}/assembler"
-    "${JAVASCRIPTCORE_DIR}/bytecode"
-    "${JAVASCRIPTCORE_DIR}/bytecompiler"
-    "${JAVASCRIPTCORE_DIR}/dfg"
-    "${JAVASCRIPTCORE_DIR}/disassembler"
-    "${JAVASCRIPTCORE_DIR}/heap"
-    "${JAVASCRIPTCORE_DIR}/debugger"
-    "${JAVASCRIPTCORE_DIR}/interpreter"
-    "${JAVASCRIPTCORE_DIR}/jit"
-    "${JAVASCRIPTCORE_DIR}/llint"
-    "${JAVASCRIPTCORE_DIR}/parser"
-    "${JAVASCRIPTCORE_DIR}/profiler"
-    "${JAVASCRIPTCORE_DIR}/runtime"
-    "${JAVASCRIPTCORE_DIR}/yarr"
+    "${WEBCORE_DIR}/ForwardingHeaders/v8" #add v8 dir in ForwardingHeaders/
+    "${WEBCORE_DIR}/ForwardingHeaders/v8/runtime" #add v8 dir
+
+    #"${JAVASCRIPTCORE_DIR}"
+    #"${JAVASCRIPTCORE_DIR}/ForwardingHeaders"
+    #"${JAVASCRIPTCORE_DIR}/API"
+    #"${JAVASCRIPTCORE_DIR}/assembler"
+    #"${JAVASCRIPTCORE_DIR}/bytecode"
+    #"${JAVASCRIPTCORE_DIR}/bytecompiler"
+    #"${JAVASCRIPTCORE_DIR}/dfg"
+    #"${JAVASCRIPTCORE_DIR}/disassembler"
+    #"${JAVASCRIPTCORE_DIR}/heap"
+    #"${JAVASCRIPTCORE_DIR}/debugger"
+    #"${JAVASCRIPTCORE_DIR}/interpreter"
+    #"${JAVASCRIPTCORE_DIR}/jit"
+    #"${JAVASCRIPTCORE_DIR}/llint"
+    #"${JAVASCRIPTCORE_DIR}/parser"
+    #"${JAVASCRIPTCORE_DIR}/profiler"
+    "${JAVASCRIPTCORE_DIR}/v8"
+    "${JAVASCRIPTCORE_DIR}/v8/heap"
+    #"${JAVASCRIPTCORE_DIR}/yarr"
+
     "${V8_DIR}/include"
     "${WTF_DIR}"
     "${DERIVED_SOURCES_DIR}"
