--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -1049,6 +1049,9 @@ set(WebCore_SOURCES
     bindings/v8/custom/V8FileReaderCustom.cpp
     bindings/v8/custom/V8CustomVoidCallback.cpp
     bindings/v8/custom/V8DOMWindowCustom.cpp
+    bindings/v8/custom/V8NamedNodeMapCustom.cpp
+    bindings/v8/custom/V8CSSStyleSheetCustom.cpp
+    bindings/v8/V8Uint8Array.cpp
     bindings/v8/V8EventListener.cpp
     bindings/v8/specialization/V8BindingState.cpp
     bindings/v8/ScriptEventListener.cpp
