link:212 , add V8WorkerContextCustom.cpp

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -1051,6 +1051,7 @@ set(WebCore_SOURCES
     bindings/v8/custom/V8DOMWindowCustom.cpp
     bindings/v8/custom/V8NamedNodeMapCustom.cpp
     bindings/v8/custom/V8CSSStyleSheetCustom.cpp
+    bindings/v8/custom/V8WorkerContextCustom.cpp
     bindings/v8/V8Uint8Array.cpp
     bindings/v8/V8EventListener.cpp
     bindings/v8/specialization/V8BindingState.cpp
