--- a/Source/BrowserApp/midori/CMakeLists.txt
+++ b/Source/BrowserApp/midori/CMakeLists.txt
@@ -56,23 +56,23 @@ include_directories(
 		    "${MIDORI_SOURCE_DIR}/settings"
                     ${CMAKE_BINARY_DIR}
                     "${CMAKE_SOURCE_DIR}/Source"
-                    "${JAVASCRIPTCORE_DIR}"
-                    "${JAVASCRIPTCORE_DIR}/ForwardingHeaders"
-                    "${JAVASCRIPTCORE_DIR}/API"
-                    "${JAVASCRIPTCORE_DIR}/assembler"
-                    "${JAVASCRIPTCORE_DIR}/bytecode"
-                    "${JAVASCRIPTCORE_DIR}/bytecompiler"
-                    "${JAVASCRIPTCORE_DIR}/dfg"
-                    "${JAVASCRIPTCORE_DIR}/disassembler"
-                    "${JAVASCRIPTCORE_DIR}/heap"
-                    "${JAVASCRIPTCORE_DIR}/debugger"
-                    "${JAVASCRIPTCORE_DIR}/interpreter"
-                    "${JAVASCRIPTCORE_DIR}/jit"
-                    "${JAVASCRIPTCORE_DIR}/llint"
-                    "${JAVASCRIPTCORE_DIR}/parser"
-                    "${JAVASCRIPTCORE_DIR}/profiler"
-                    "${JAVASCRIPTCORE_DIR}/runtime"
-                    "${JAVASCRIPTCORE_DIR}/yarr"
+                    "${JAVASCRIPTCORE_DIR}/v8"
+                    #"${JAVASCRIPTCORE_DIR}/ForwardingHeaders"
+                    #"${JAVASCRIPTCORE_DIR}/API"
+                    #"${JAVASCRIPTCORE_DIR}/assembler"
+                    #"${JAVASCRIPTCORE_DIR}/bytecode"
+                    #"${JAVASCRIPTCORE_DIR}/bytecompiler"
+                    #"${JAVASCRIPTCORE_DIR}/dfg"
+                    #"${JAVASCRIPTCORE_DIR}/disassembler"
+                    #"${JAVASCRIPTCORE_DIR}/heap"
+                    #"${JAVASCRIPTCORE_DIR}/debugger"
+                    #"${JAVASCRIPTCORE_DIR}/interpreter"
+                    #"${JAVASCRIPTCORE_DIR}/jit"
+                    #"${JAVASCRIPTCORE_DIR}/llint"
+                    #"${JAVASCRIPTCORE_DIR}/parser"
+                    #"${JAVASCRIPTCORE_DIR}/profiler"
+                    #"${JAVASCRIPTCORE_DIR}/runtime"
+                    #"${JAVASCRIPTCORE_DIR}/yarr"
                     "${WTF_DIR}"
                     "${DERIVED_SOURCES_DIR}"
                     "${DERIVED_SOURCES_DIR}/ForwardingHeaders"
